Fix text-align

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -12,8 +12,7 @@ $workflow-background = rgb(0, 0, 0) $workflow-text-color = rgb(240, 240, 240)
   .viewport
     padding-bottom: 10px
     user-select none
-    -webkit-user-select none
-    -moz-user-select none
+    -webkit-user-select none -moz-user-select none
     -ms-user-select none
     -o-user-select none
     
@@ -135,7 +134,6 @@ $workflow-background = rgb(0, 0, 0) $workflow-text-color = rgb(240, 240, 240)
 
     p
       margin 0
-      text-align: right
 
     span
       background lighten($workflow-background, 10%)
@@ -160,6 +158,9 @@ $workflow-background = rgb(0, 0, 0) $workflow-text-color = rgb(240, 240, 240)
       font-size 12px
       font-weight 800
       line-height 30px
+
+      p
+        text-align: right
 
     .content
       margin-top 12px
